[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-types = { git = "https://github.com/casper-network/casper-node", branch = "release-2.0.0-rc4" }
casper-event-standard = { path = "../casper-event-standard" }
casper-contract = { git = "https://github.com/casper-network/casper-node", branch = "release-2.0.0-rc4", optional = true }

[dev-dependencies]
casper-engine-test-support = { git = "https://github.com/casper-network/casper-node", branch = "release-2.0.0-rc4" }
casper-execution-engine = { git = "https://github.com/casper-network/casper-node", branch = "release-2.0.0-rc4" }

[features]
default = ["contract-support"]
contract-support = [ "dep:casper-contract" ]

[[bin]]
name = "event_producer"
path = "bin/event_producer.rs"
required-features = ["contract-support"]

[[bin]]
name = "event_initializer"
path = "bin/event_initializer.rs"
required-features = ["contract-support"]

[[test]]
name = "vm_tests"
path = "tests/vm_tests.rs"
